--- a/AIEProjects-StarterTemplate - Graph/Project1/Project1.vcxproj.filters
+++ b/AIEProjects-StarterTemplate - Graph/Project1/Project1.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Blood.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FSM.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Game1.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Blood.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FSM.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
